--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
+    "mysql": "^2.18.1",
     "pug": "^2.0.4",
     "pushsafer-notifications": "^0.1.8"
   }
