--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "calidad",
-  "version": "1.0.0",
-  "description": "Aplicacion para manejar notificaciones de calidad",
-  "main": "app.js",
+  "name": "notificacionescalidad",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "author": "Alejandro Medina",
-  "license": "ISC",
   "dependencies": {
     "angular": "^1.7.9",
     "angular-animate": "^1.7.9",
     "angular-aria": "^1.7.9",
     "angular-material": "^1.1.21",
+    "angular-md5": "^0.1.10",
     "angular-messages": "^1.7.9",
-    "debug": "^4.1.1",
-    "express": "^4.17.1",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
     "jquery": "^3.4.1",
+    "md5": "^2.2.1",
     "moment": "^2.24.0",
+    "morgan": "~1.9.1",
     "mysql": "^2.18.1",
-    "pug": "^2.0.4",
-    "pushsafer-notifications": "^0.1.8"
+    "pug": "2.0.0-beta11"
   }
 }
