--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "angular-material": "^1.1.21",
     "angular-md5": "^0.1.10",
     "angular-messages": "^1.7.9",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
     "jquery": "^3.4.1",
+    "jsonwebtoken": "^8.5.1",
     "md5": "^2.2.1",
     "moment": "^2.24.0",
     "morgan": "~1.9.1",
