--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.24.0",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "pushsafer-notifications": "^0.1.8"
   }
 }
