--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-favicon": "^2.0.1",
     "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
     "jquery": "^3.4.1",
