--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "activedirectory": "^0.7.2",
     "angular": "^1.7.9",
     "angular-animate": "^1.7.9",
     "angular-aria": "^1.7.9",
@@ -21,11 +22,14 @@
     "http-errors": "~1.6.3",
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
+    "ldapjs": "^1.0.2",
     "md5": "^2.2.1",
     "moment": "^2.24.0",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
+    "node-gyp": "^6.1.0",
     "pug": "2.0.0-beta11",
-    "pushsafer-notifications": "^0.1.8"
+    "pushsafer-notifications": "^0.1.8",
+    "rebuild": "^0.1.2"
   }
 }
