--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "angular-md5": "^0.1.10",
     "angular-messages": "^1.7.9",
     "angular-ui-sortable": "^0.19.0",
+    "axios": "^0.19.2",
     "basic-ftp": "^4.6.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
